side nav menu and scrollbar fixes

--- a/input_scss/_main-styles.scss
+++ b/input_scss/_main-styles.scss
@@ -77,6 +77,7 @@ body {
     }
 .show-overlay {
   visibility: visible;
+  transition: 0.5s;
 }
 
 
@@ -88,7 +89,6 @@ body {
 
 #scroll {
   display: block;
-  width: 100vw;
   overflow-y: hidden;
   overflow-x: hidden;
   z-index: 1;
@@ -97,11 +97,12 @@ body {
 
 .scroll-full-height {
   height: 100%;
+
 }
 
 .scroll-freeze {
   height: 100vh;
-  overflow: scroll;
+
 }
 
 
