--- a/input_scss/sidenav/_sidenav.scss
+++ b/input_scss/sidenav/_sidenav.scss
@@ -1,12 +1,20 @@
 
 //* sidebar navigation  *//
+#side-nav-container {
+  height: 100%;
+  transition: 0.5s;
+
+}
+
+
+
 
 #sideNav {
   height: 100%;
   width: 275px;
   position: fixed;
   transition: 0.5s;
-  z-index: 1;
+  z-index: -1;
   top: 0;
   right: 0;
   background-color: #333645;
