--- a/output_css/style.css
+++ b/output_css/style.css
@@ -230,11 +230,11 @@ body ul {
 
 .show-overlay {
   visibility: visible;
+  transition: 0.5s;
 }
 
 #scroll {
   display: block;
-  width: 100vw;
   overflow-y: hidden;
   overflow-x: hidden;
   z-index: 1;
@@ -246,7 +246,6 @@ body ul {
 
 .scroll-freeze {
   height: 100vh;
-  overflow: scroll;
 }
 
 .nav-down {
@@ -266,12 +265,17 @@ body ul {
   transition-duration: 0.5s;
 }
 
+#side-nav-container {
+  height: 100%;
+  transition: 0.5s;
+}
+
 #sideNav {
   height: 100%;
   width: 275px;
   position: fixed;
   transition: 0.5s;
-  z-index: 1;
+  z-index: -1;
   top: 0;
   right: 0;
   background-color: #333645;
